# org-program-lang

./: README.md  index.html  npx.sh
etc/a1/: CS3342a1.docx
etc/jflap/: calc_LL1.jff  calc_LR1.jff  idList_LL1.jff  idList_LR1.jff
etc/mc/hw_WFQ/hw1/: A1_400298939.hs  hw1.cabal  test.hs
etc/mc/hw_WFQ/hw1/dist-newstyle/cache/: compiler  config
etc/mc/hw_WFQ/hw2/: A2_400298939.pl
etc/mc/hw_WFQ/hw3/skeleton/: README.txt  a3.cabal
etc/mc/hw_WFQ/hw3/skeleton/test/: LoopyLambdaTests.hs  (+1 more)
etc/mc/hw_WFQ/hw4/: Lambda.hs  testing.out  testing.pl  typing.pl
etc/mc/hw_WFQ/hw5/: A5.cabal  A5.hs  A5test.hs  Skel.hs
etc/mc/hw_WFQ/hw5/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
etc/mc/hw_WFQ/hw5/dist-newstyle/packagedb/ghc-9.8.1/: a5-0.1.0-inplace.conf  a5-0.1.0.0-inplace.conf  package.cache
etc/py/: cleaned_demo.py  comm_rm copy 2.py  comm_rm.py  comm_rm1.py  comm_rm_working.py  demo.py  go.mod  input_file.py  main.go
etc/py/Lexical/: Lexical.css  Lexical.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
node/: input.css  output.css  package-lock.json  tailwind.config.js
scheme/: Untitled.rkt  Untitled.rkt~  datatypes_predicates.scm  datatypes_predicates.scm~  eat-apple.scm  lcs.rkt  notations.scm  notations.scm~  odd-range.scm  random1.rkt  repl.scm~  tree.scm
scheme/formatter/: 1.lisp  index.html  script.js
(+12 files in other folders)
